--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,22 +82,17 @@ jobs:
         run: |
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
           $workspace = $env:GITHUB_WORKSPACE
-          $installerPath = Join-Path $workspace "${{ env.INSTALLER_DIR }}\MessengerActive_Setup.exe"
-          if (-not (Test-Path $installerPath)) {
-            $found = Get-ChildItem -Path (Join-Path $workspace ${{ env.INSTALLER_DIR }}) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
-            if ($found) { $installerPath = $found.FullName }
-          }
-          if (-not (Test-Path $installerPath)) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
+          $installerPath = Get-ChildItem -Path (Join-Path $workspace ${{ env.INSTALLER_DIR }}) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
+          if (-not $installerPath) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
           $version = "${{ steps.version.outputs.version }}"
           $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
-          Rename-Item -Path $installerPath -NewName $newInstallerName -Force
+          Rename-Item -Path $installerPath.FullName -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerName"
 
       - name: 🔏 Self-sign the installer (optional)
         if: env.SIGN_INTERNAL == 'true'
         shell: pwsh
         run: |
-          Write-Host "🔏 Creating temporary code signing certificate..."
           $workspace = $env:GITHUB_WORKSPACE
           $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
           $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
@@ -105,6 +100,7 @@ jobs:
 
           $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
           $password = "password123"
+
           $cert = New-SelfSignedCertificate `
               -Subject "CN=MessengerActive Developer Certificate" `
               -CertStoreLocation "Cert:\LocalMachine\My" `
@@ -120,24 +116,19 @@ jobs:
               -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
               -Force
 
-          Write-Host "✅ Temporary PFX created at: $certPath"
-
           $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
           if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
 
           $installerPath = $installer.FullName
-          Write-Host "🔏 Signing installer..."
           & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
           & $signtool.FullName verify /pa /v $installerPath
           if ($LASTEXITCODE -ne 0) { Write-Error "❌ Signature verification failed!"; exit 1 }
-          Write-Host "✅ Self-signed successfully."
 
       - name: ⬆️ Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: messengeractive-artifacts
-          path: |
-            Output
+          path: Output/MessengerActive_Setup_*.exe
 
   prerelease:
     name: 🚀 Create Pre-Release
@@ -155,16 +146,6 @@ jobs:
           name: messengeractive-artifacts
           path: release
 
-      - name: 🔍 Verify downloaded files
-        shell: pwsh
-        run: |
-          $outputDir = Join-Path $PWD "release/Output"
-          if (-not (Test-Path $outputDir)) { Write-Error "release/Output not found"; exit 1 }
-          Get-ChildItem -Recurse $outputDir | ForEach-Object { Write-Host $_.FullName }
-          $installer = Get-ChildItem $outputDir -Filter "MessengerActive_Setup_*.exe" | Select-Object -First 1
-          if (-not $installer) { Write-Error "Installer not found in release/Output"; exit 1 }
-          Write-Host "✅ Installer verified successfully"
-
       - name: 🏷️ Create Pre-release on GitHub
         uses: softprops/action-gh-release@v2
         with:
@@ -172,6 +153,6 @@ jobs:
           name: "MessengerActive v${{ needs.build.outputs.version }}"
           prerelease: true
           files: |
-            release/Output/MessengerActive_Setup_*.exe
+            release/MessengerActive_Setup_*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
