--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,48 +66,42 @@ jobs:
           git commit -m "Bump version to ${{ steps.version.outputs.version }}" || echo "No changes to commit"
           git push origin HEAD:main
 
-      - name: 🏗️ Build executable
+      - name: 🏗️ Build executable (onefile)
         shell: pwsh
         run: |
-          pyinstaller --noconfirm --onefile --windowed --icon ma_icon.ico `
-            --add-data "version.txt;." MessengerActive.py
+          pyinstaller --noconfirm --onefile --windowed --icon ma_icon.ico MessengerActive.py
 
-          $exePath = "$env:BUILD_DIR/MessengerActive.exe"
+          $exePath = Join-Path $env:BUILD_DIR "MessengerActive.exe"
           if (-not (Test-Path $exePath)) {
-            Write-Error "Executable not found after PyInstaller! Expected at $exePath"
+            Write-Error "Executable not found after PyInstaller!"
             exit 1
           }
 
-          Write-Host "✅ PyInstaller onefile build succeeded: $exePath"
+          # Copy executable to Output folder for Inno Setup
+          $outputDir = Join-Path $env:GITHUB_WORKSPACE $env:INSTALLER_DIR
+          if (-not (Test-Path $outputDir)) { New-Item -Path $outputDir -ItemType Directory | Out-Null }
+          Copy-Item $exePath -Destination $outputDir -Force
 
       - name: 📦 Create installer (Inno Setup)
         shell: pwsh
         run: |
-          $workspace = $env:GITHUB_WORKSPACE
-          $exePath = Join-Path $workspace "$env:BUILD_DIR\MessengerActive.exe"
-          if (-not (Test-Path $exePath)) { Write-Error "Executable not found for installer!"; exit 1 }
-
-          # Optionally, copy to Output folder to match your current structure
-          $outputDir = Join-Path $workspace $env:INSTALLER_DIR
-          if (-not (Test-Path $outputDir)) { New-Item -Path $outputDir -ItemType Directory | Out-Null }
-          Copy-Item $exePath -Destination $outputDir -Force
-
-          # Run Inno Setup
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
 
-          # Rename the installer with version
-          $installerPath = Get-ChildItem -Path $outputDir -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
+          # Verify installer
+          $installerPath = Get-ChildItem -Path (Join-Path $env:GITHUB_WORKSPACE $env:INSTALLER_DIR) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
           if (-not $installerPath) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
 
+          # Rename installer with version
           $version = "${{ steps.version.outputs.version }}"
           $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
           Rename-Item -Path $installerPath.FullName -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerName"
 
-      - name: 🔏 Self-sign the installer (optional)
+      - name: 🔏 Self-sign the installer (optional for internal testing)
         if: env.SIGN_INTERNAL == 'true'
         shell: pwsh
         run: |
+          Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
           $workspace = $env:GITHUB_WORKSPACE
           $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
           $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
@@ -131,19 +125,26 @@ jobs:
               -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
               -Force
 
+          Write-Host "✅ Temporary PFX created at: $certPath"
+
           $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
           if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
 
           $installerPath = $installer.FullName
+          Write-Host "🔏 Signing installer with temporary developer certificate..."
           & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
+
           & $signtool.FullName verify /pa /v $installerPath
           if ($LASTEXITCODE -ne 0) { Write-Error "❌ Signature verification failed!"; exit 1 }
+
+          Write-Host "✅ Self-signed successfully for internal testing."
 
       - name: ⬆️ Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: messengeractive-artifacts
-          path: Output/MessengerActive_Setup_*.exe
+          path: |
+            Output/MessengerActive_Setup_*.exe
 
   prerelease:
     name: 🚀 Create Pre-Release
@@ -168,6 +169,6 @@ jobs:
           name: "MessengerActive v${{ needs.build.outputs.version }}"
           prerelease: true
           files: |
-            release/MessengerActive_Setup_*.exe
+            release/Output/MessengerActive_Setup_*.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
