--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,14 +41,12 @@ jobs:
       - name: 🧪 Run all tests
         run: pytest -v || exit 1
 
-      - name: 🧪 Run single-instance test
-        run: pytest -v tests/test_single_instance.py || exit 1
-
       - name: 🔢 Bump version
         id: version
         shell: pwsh
         run: |
-          $version = Get-Content version.txt
+          $version = Get-Content version.txt -Raw
+          $version = $version.Trim()
           $parts = $version.Split('.')
           $parts[-1] = [int]$parts[-1] + 1
           $newVersion = "$($parts -join '.')"
@@ -72,79 +70,33 @@ jobs:
           pyinstaller --noconfirm --onefile --windowed --icon ma_icon.ico MessengerActive.py
 
           $exePath = Join-Path $env:BUILD_DIR "MessengerActive.exe"
-          if (-not (Test-Path $exePath)) {
-            Write-Error "Executable not found after PyInstaller!"
-            exit 1
-          }
+          if (-not (Test-Path $exePath)) { Write-Error "Executable not found after PyInstaller!"; exit 1 }
 
-          # Copy executable to Output folder for Inno Setup
           $outputDir = Join-Path $env:GITHUB_WORKSPACE $env:INSTALLER_DIR
           if (-not (Test-Path $outputDir)) { New-Item -Path $outputDir -ItemType Directory | Out-Null }
           Copy-Item $exePath -Destination $outputDir -Force
+          Write-Host "✅ Executable ready for Inno Setup"
 
       - name: 📦 Create installer (Inno Setup)
         shell: pwsh
         run: |
+          # Update ISS file with new version
+          (Get-Content MessengerActive.iss) -replace '#define MyAppVersion ".*"', "#define MyAppVersion `"$($env:VERSION)`"" | Set-Content MessengerActive.iss
+
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
 
-          # Verify installer
           $installerPath = Get-ChildItem -Path (Join-Path $env:GITHUB_WORKSPACE $env:INSTALLER_DIR) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
           if (-not $installerPath) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
 
-          # Rename installer with version
-          $version = "${{ steps.version.outputs.version }}"
-          $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
+          $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$($env:VERSION).exe"
           Rename-Item -Path $installerPath.FullName -NewName $newInstallerName -Force
-          Write-Host "✅ Renamed installer to: $newInstallerName"
-
-      - name: 🔏 Self-sign the installer (optional for internal testing)
-        if: env.SIGN_INTERNAL == 'true'
-        shell: pwsh
-        run: |
-          Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
-          $workspace = $env:GITHUB_WORKSPACE
-          $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
-          $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
-          if (-not $installer) { Write-Error "Installer not found for signing"; exit 1 }
-
-          $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
-          $password = "password123"
-
-          $cert = New-SelfSignedCertificate `
-              -Subject "CN=MessengerActive Developer Certificate" `
-              -CertStoreLocation "Cert:\LocalMachine\My" `
-              -KeyExportPolicy Exportable `
-              -KeyAlgorithm RSA `
-              -KeyLength 2048 `
-              -HashAlgorithm SHA256 `
-              -NotAfter (Get-Date).AddDays(30)
-
-          Export-PfxCertificate `
-              -Cert $cert `
-              -FilePath $certPath `
-              -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
-              -Force
-
-          Write-Host "✅ Temporary PFX created at: $certPath"
-
-          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
-          if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
-
-          $installerPath = $installer.FullName
-          Write-Host "🔏 Signing installer with temporary developer certificate..."
-          & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
-
-          & $signtool.FullName verify /pa /v $installerPath
-          if ($LASTEXITCODE -ne 0) { Write-Error "❌ Signature verification failed!"; exit 1 }
-
-          Write-Host "✅ Self-signed successfully for internal testing."
+          Write-Host "✅ Installer created: $newInstallerName"
 
       - name: ⬆️ Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: messengeractive-artifacts
-          path: |
-            Output/MessengerActive_Setup_*.exe
+          path: Output/MessengerActive_Setup_*.exe
 
   prerelease:
     name: 🚀 Create Pre-Release
